--- a/Dialog.css
+++ b/Dialog.css
@@ -8,11 +8,13 @@
 }
 
 .myDialog {
-	--width: 200px;
-	--height: 100px;
+	--max-width: 100vw;
+	--max-height: 100vh;
+	overflow: auto;
 	position: fixed;
-	width: var(--width);
-	height: var(--height);
+	box-sizing: border-box;
+	max-width: min(calc(100vw - 20px), var(--max-width));
+	max-height: min(calc(100vh - 20px), var(--max-height));
 	left: max(10px, calc(50vw - var(--width) / 2));
 	top: max(10px, calc(33vh - var(--height) / 3));
 	background-color: #444;
@@ -24,12 +26,10 @@
 }
 
 .myDialog > .buttonsContainer {
-	position: absolute;
-	bottom: 10px;
-	width: calc(100% - 20px);
 	display: flex;
 	justify-content: center;
 	column-gap: 10px;
+	margin-top: 10px;
 }
 
 .myDialog button {
