--- a/Dialog.css
+++ b/Dialog.css
@@ -10,7 +10,9 @@
 .myDialog {
 	--max-width: 100vw;
 	--max-height: 100vh;
-	overflow: auto;
+	display: flex;
+	flex-flow: column;
+	overflow: hidden;
 	position: fixed;
 	box-sizing: border-box;
 	max-width: min(calc(100vw - 20px), var(--max-width));
@@ -21,15 +23,23 @@
 	border: 1px solid black;
 	box-shadow: 0 0 7px black;
 	font-size: 11pt;
-	padding: 10px;
 	z-index: 9000;
+}
+
+.myDialog > .header {
+	padding: 5px;
+}
+
+.myDialog > .content {
+	overflow: auto;
+	padding: 10px;
 }
 
 .myDialog > .buttonsContainer {
 	display: flex;
 	justify-content: center;
 	column-gap: 10px;
-	margin-top: 10px;
+	padding: 10px;
 }
 
 .myDialog button {
