--- a/Dialog.css
+++ b/Dialog.css
@@ -10,9 +10,7 @@
 .myDialog {
 	--max-width: 100vw;
 	--max-height: 100vh;
-	display: flex;
-	flex-flow: column;
-	overflow: hidden;
+	overflow: auto;
 	position: fixed;
 	box-sizing: border-box;
 	max-width: min(calc(100vw - 20px), var(--max-width));
@@ -27,7 +25,15 @@
 	z-index: 9000;
 }
 
-.myDialog > .header {
+.myDialog > div {
+	display: flex;
+	flex-flow: column;
+	width: fit-content;
+	height: fit-content;
+	max-height: calc(min(calc(100vh - 20px), var(--max-height)) - 2px);
+}
+
+.myDialog .header {
 	background-color: #555;
 	padding: 5px;
 	display: flex;
@@ -46,12 +52,12 @@
 	fill: #222;
 }
 
-.myDialog > .content {
+.myDialog .content {
 	overflow: auto;
 	padding: 10px;
 }
 
-.myDialog > .buttonsContainer {
+.myDialog .buttonsContainer {
 	display: flex;
 	justify-content: center;
 	column-gap: 10px;
